Добавлен раздел с книгами 1.0

--- a/app/src/main/res/layout/activity_collections_six.xml
+++ b/app/src/main/res/layout/activity_collections_six.xml
@@ -87,8 +87,8 @@
                 </LinearLayout>
 
                 <TextView
-                    style="@style/textViewStrip"
-                    android:text="@string/strip" />
+                    style="@style/textViewVersionName"
+                    android:text="@string/versionNameApp" />
 
             </LinearLayout>
 
