--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,13 +30,14 @@
         <item name="android:padding">5dp</item>
         <item name="android:layout_margin">5dp</item>
         <item name="android:textColor">@color/colorOrange</item>
-        <item name="android:textStyle">italic</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="textViewStrip">
+    <style name="textViewVersionName">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">15dp</item>
+        <item name="android:rotationX">20</item>
         <item name="android:layout_marginBottom">15dp</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textSize">15sp</item>
@@ -69,6 +70,16 @@
         <item name="android:textStyle">italic</item>
         <item name="android:text">@string/lessons_btn</item>
         <item name="android:onClick">onClickLessons</item>
+        <item name="android:background">@drawable/style_btn3_press</item>
+    </style>
+
+    <style name="button_style_settings">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/colorOrange</item>
+        <item name="android:textStyle">italic</item>
         <item name="android:background">@drawable/style_btn3_press</item>
     </style>
 
