--- a/app/src/main/res/layout/activity_collections_four.xml
+++ b/app/src/main/res/layout/activity_collections_four.xml
@@ -59,8 +59,8 @@
                 </LinearLayout>
 
                 <TextView
-                    style="@style/textViewStrip"
-                    android:text="@string/strip" />
+                    style="@style/textViewVersionName"
+                    android:text="@string/versionNameApp" />
 
             </LinearLayout>
 
