--- a/app/src/main/res/layout/activity_collections_seven.xml
+++ b/app/src/main/res/layout/activity_collections_seven.xml
@@ -168,8 +168,8 @@
                 </LinearLayout>
 
                 <TextView
-                    style="@style/textViewStrip"
-                    android:text="@string/strip" />
+                    style="@style/textViewVersionName"
+                    android:text="@string/versionNameApp" />
 
             </LinearLayout>
 
