--- a/app/src/main/res/layout/activity_lessons_fourteen.xml
+++ b/app/src/main/res/layout/activity_lessons_fourteen.xml
@@ -100,8 +100,8 @@
                 </LinearLayout>
 
                 <TextView
-                    style="@style/textViewStrip"
-                    android:text="@string/strip" />
+                    style="@style/textViewVersionName"
+                    android:text="@string/versionNameApp" />
 
             </LinearLayout>
 
