--- a/app/src/main/res/layout/activity_oop_three.xml
+++ b/app/src/main/res/layout/activity_oop_three.xml
@@ -73,8 +73,8 @@
                 </LinearLayout>
 
                 <TextView
-                    style="@style/textViewStrip"
-                    android:text="@string/strip" />
+                    style="@style/textViewVersionName"
+                    android:text="@string/versionNameApp" />
 
             </LinearLayout>
 
