--- a/app/src/main/res/layout/activity_oop_two.xml
+++ b/app/src/main/res/layout/activity_oop_two.xml
@@ -155,8 +155,8 @@
                 </LinearLayout>
 
                 <TextView
-                    style="@style/textViewStrip"
-                    android:text="@string/strip" />
+                    style="@style/textViewVersionName"
+                    android:text="@string/versionNameApp" />
 
             </LinearLayout>
 
